--- a/Data_Enriching.ipynb
+++ b/Data_Enriching.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NB: File can be found at /burg/pmg/users/mc5672/data/ICU_Reference.xlsx\n",
+    "# NB: File can be found at /manitou/pmg/projects/korem_lab/Data/Freedberg_inulin_trial/validation_data/metadata\n",
     "val_ref = pd.read_excel(\"/Users/mcarrion/Korem_Lab/ICU_Reference.xlsx\")\n",
     "val_ref.head()"
    ]
@@ -138,6 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#NB: File can be found at /manitou/pmg/projects/korem_lab/Data/Freedberg_inulin_trial/metadata\n",
     "orig_ref = pd.read_excel(\"/Users/mcarrion/Korem_Lab/orig_data_outcomes.xls\")\n",
     "orig_ref.head()"
    ]
@@ -182,6 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NB: File can be found at /manitou/pmg/projects/korem_lab/Data/Freedberg_inulin_trial/metadata\n",
     "sofa = pd.read_csv('/burg/pmg/users/mc5672/prev_analysis/data/metadata/sofascores.csv', index_col=0)\n",
     "sofa_scores = sofa[['sofascore']]\n",
     "merged_df_orig = merged_df_orig.merge(\n",
